// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader Loader center: Loader center 1`] = `
<div
  className="loader loader--center"
>
  <div
    className="loader__line"
    key="0"
  />
  <div
    className="loader__line"
    key="1"
  />
  <div
    className="loader__line"
    key="2"
  />
  <div
    className="loader__line"
    key="3"
  />
  <div
    className="loader__line"
    key="4"
  />
  <div
    className="loader__line"
    key="5"
  />
  <div
    className="loader__line"
    key="6"
  />
  <div
    className="loader__line"
    key="7"
  />
  <div
    className="loader__line"
    key="8"
  />
  <div
    className="loader__line"
    key="9"
  />
  <div
    className="loader__line"
    key="10"
  />
  <div
    className="loader__line"
    key="11"
  />
</div>
`;

exports[`Loader Loader large: Loader large 1`] = `
<div
  className="loader loader--large"
>
  <div
    className="loader__line"
    key="0"
  />
  <div
    className="loader__line"
    key="1"
  />
  <div
    className="loader__line"
    key="2"
  />
  <div
    className="loader__line"
    key="3"
  />
  <div
    className="loader__line"
    key="4"
  />
  <div
    className="loader__line"
    key="5"
  />
  <div
    className="loader__line"
    key="6"
  />
  <div
    className="loader__line"
    key="7"
  />
  <div
    className="loader__line"
    key="8"
  />
  <div
    className="loader__line"
    key="9"
  />
  <div
    className="loader__line"
    key="10"
  />
  <div
    className="loader__line"
    key="11"
  />
</div>
`;

exports[`Loader Loader small: Loader small 1`] = `
<div
  className="loader loader--small"
>
  <div
    className="loader__line"
    key="0"
  />
  <div
    className="loader__line"
    key="1"
  />
  <div
    className="loader__line"
    key="2"
  />
  <div
    className="loader__line"
    key="3"
  />
  <div
    className="loader__line"
    key="4"
  />
  <div
    className="loader__line"
    key="5"
  />
  <div
    className="loader__line"
    key="6"
  />
  <div
    className="loader__line"
    key="7"
  />
  <div
    className="loader__line"
    key="8"
  />
  <div
    className="loader__line"
    key="9"
  />
  <div
    className="loader__line"
    key="10"
  />
  <div
    className="loader__line"
    key="11"
  />
</div>
`;

exports[`Loader Match snapshot 1`] = `
<div
  className="loader"
>
  <div
    className="loader__line"
    key="0"
  />
  <div
    className="loader__line"
    key="1"
  />
  <div
    className="loader__line"
    key="2"
  />
  <div
    className="loader__line"
    key="3"
  />
  <div
    className="loader__line"
    key="4"
  />
  <div
    className="loader__line"
    key="5"
  />
  <div
    className="loader__line"
    key="6"
  />
  <div
    className="loader__line"
    key="7"
  />
  <div
    className="loader__line"
    key="8"
  />
  <div
    className="loader__line"
    key="9"
  />
  <div
    className="loader__line"
    key="10"
  />
  <div
    className="loader__line"
    key="11"
  />
</div>
`;
